# numcpp

./: CMakeLists.txt  README.md  main.cpp
include/numcpp/: numcpp.h
include/numcpp/base/: ndarray.h
src/: CMakeLists.txt
src/numcpp/: numcpp.cpp
src/numcpp/base/: ndarray.cpp
